--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,8 +9,8 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="icon" href="./logo_small_icon_only_inverted.png" />
-    <title>CovidTracker</title>
+    <link rel="icon" href="./logo.png" />
+    <title>Yummy</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
